<resources>
    <string name="app_name">Vector</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="phone_prefix">+7</string>
</resources>