<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/shape_left_panel"
        app:layout_constraintStart_toStartOf="@id/loginConstraintLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/signin_signup_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginCardView"
        app:layout_constraintStart_toStartOf="@id/loginCardView" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/signin_signup_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:clickable="true"
        android:text="@string/sign_up"
        android:textColor="@color/sky_blue"
        android:textSize="@dimen/title_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginCardView"
        app:layout_constraintEnd_toEndOf="@id/loginCardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginTop="@dimen/cardview_margin_top"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginBottom="@dimen/cardview_margin_bottom"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardview_corner_radius"
        app:cardElevation="@dimen/cardview_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailLoginTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_edittext_marginTopOfCardview"
                app:layout_constraintEnd_toEndOf="@id/cardViewConstraintLayout"
                app:layout_constraintStart_toStartOf="@id/cardViewConstraintLayout"
                app:layout_constraintTop_toTopOf="@id/cardViewConstraintLayout"
                app:startIconDrawable="@drawable/ic_phone"
                app:prefixText="@string/phone_prefix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLoginEditText"
                    android:layout_width="@dimen/carview_edittext_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="@integer/phone_number_max_length"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLoginTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_edittext_marginTopOfEdittext"
                app:layout_constraintEnd_toEndOf="@id/mailLoginTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/mailLoginTextInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/mailLoginTextInputLayout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailPasswordEditText"
                    android:layout_width="@dimen/carview_edittext_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/sky_blue"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/passwordLoginTextInputLayout"
                app:layout_constraintStart_toStartOf="@id/passwordLoginTextInputLayout"
                app:layout_constraintTop_toBottomOf="@id/passwordLoginTextInputLayout" />

            <ImageButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/sign_in"
                android:elevation="20dp"
                android:src="@drawable/ic_circle_arrow_next"
                app:layout_constraintBottom_toBottomOf="@id/cardViewConstraintLayout"
                app:layout_constraintEnd_toEndOf="@id/cardViewConstraintLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>